test/negative/compile_error_outside_comptime.cg
// `builtin::compile_error` is comptime-only.

fn main() -> i32 {
    builtin::compile_error("nope");
}

